--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -6,9 +6,12 @@
 
 \chapter{Adsorption molecular simulations}
 \vspace*{-1\baselineskip}
-\section{Standard simulation tools}
 
-\subsection{Grand canonical monte carlo}
+\section{Beyond standard molecular simulations}
+
+\subsection{Grand canonical Monte Carlo}
+
+\todo{Ren2023}
 
 \subsection{Widom's insertion}
 
