--- a/cover.tex
+++ b/cover.tex
@@ -8,11 +8,11 @@
 \specialty{Chimie Physique}
 \date{XX Septembre 2023}
 
-\jurymember{1}{U Caroline \textsc{Mellot-Draznieks}}{Directrice de Recherche, Collège de France}{Présidente}
-\jurymember{2}{U Sofía \textsc{Calero}}{Professeure, Universidad Pablo de Olavide}{Rapportrice}
-\jurymember{3}{U Paul \textsc{Fleurat-Lessard}}{Professeur, Université de Bourgogne}{Rapporteur}
-\jurymember{4}{U Renaud \textsc{Denoyel}}{Directeur de Recherche, Aix-Marseille Université}{Examinateur}
-\jurymember{5}{U Alain \textsc{Fuchs}}{Professeur, PSL Université}{Examinateur}
+\jurymember{1}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
+\jurymember{2}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
+\jurymember{3}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
+\jurymember{4}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
+\jurymember{5}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
 \jurymember{6}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
@@ -27,5 +27,5 @@ During my PhD, I
 
 }
 
-\frkeywords{simulation moléculaire, matériaux nanoporeux, }
-\enkeywords{molecular simulation, porous materials, }
+\frkeywords{simulation moléculaire, matériaux nanoporeux, criblage haut-débit, adsorption, apprentissage statistique}
+\enkeywords{molecular simulation, nanoporous materials, high-throughput screening, adsorption, machine learning}
