--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 % Distributed under CC-BY-SA-NC license 4.0
 % Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
 
-\documentclass[11pt, a4paper]{book}
+\documentclass[12pt, a4paper]{book}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{classicthesis}
@@ -42,6 +42,7 @@
     url=false,
     sorting=none,
     citestyle=numeric-comp,
+    defernumbers=true,
 ]{biblatex}
 \DeclareCiteCommand{\citenum}
   {}
@@ -51,6 +52,10 @@
 \usepackage[version=4]{mhchem}
 
 \usepackage{siunitx}
+\DeclareSIUnit\bar{bar}
+\DeclareSIUnit\atm{atm}
+\newcommand{\revadd}[1]{{#1}}
+\newcommand{\revrem}[1]{{#1}}
 % Fix from https://tex.stackexchange.com/a/24278/225087
 %\newcommand{\angstrom}{\text{\normalfont\AA}}
 
